# oscar-compare

./: .gitignore  .gitmodules  CMakeLists.txt  convention.txt  run.sh  run_mg4jdebug.sh  setup.sh
cmake/: setup-lto.cmake
created/: .gitignore
data/: query-format.json  query-format.xml
foq/: CMakeLists.txt
foq/src/: main.cpp
java/: build.properties  build.xml
java/libs/: libjoscar  lucene  mg4j  mg4j-deps
java/src/de/fmi/ocse/: Config.java  Document.java  EmptySearchResult.java  Helpers.java  IndexConfig.java  LuceneSearch.java  LuceneSearchQuery.java  LuceneSearchResult.java  LuceneTextField.java  MG4JSearch.java  MG4JSearchBase.java  MG4JSearchDebug.java  MG4JSearchResult.java  Main.java  Mg4jSearchQuery.java  OscarSearch.java  OscarSearchQuery.java  OscarSearchResult.java  QueryStats.java  SearchInterface.java  SearchQueryInterface.java  SearchQueryNode.java  SearchResultInterface.java  SingleResultStat.java  TimeMeasurer.java  UnsupportedQueryType.java  Worker.java
oq2q/: CMakeLists.txt
oq2q/src/: main.cpp
oqs/: CMakeLists.txt
oqs/src/: main.cpp
